apps/zipline/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zipline
  name: zipline
  namespace: zipline
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: zipline
  type: ClusterIP
status:
  loadBalancer: {}
